Bug: Permalink arrows visibility / p0w0 theme.
git-svn-id: http://piwigo.org/svn/branches/branch-1_7@1973 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/template/yoga/theme/p0w0/theme.css
+++ b/template/yoga/theme/p0w0/theme.css
@@ -278,3 +278,6 @@ input.submit:active {
 }
 .qsearch { font-size: 80%; font-style: italic; }
 * { outline: none; }
+
+tr.throw td a { color: #fff; }
+tr.throw td a:focus { color: #f92; }
